--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "coffee-script": "1.6.3",
     "connect-multiparty": "^1.2.5",
     "express": "^3.21.2",
+    "hubot-memegen": "^0.2.0",
     "hubot-slack": "^3.3.0",
     "log": "1.4.0",
     "optparse": "1.0.4",
