--- a/package.json
+++ b/package.json
@@ -1,41 +1,24 @@
 {
   "name": "hubot",
-  "version": "2.19.0",
-  "author": "hubot",
-  "keywords": [
-    "github",
-    "hubot",
-    "campfire",
-    "bot"
-  ],
+  "version": "0.0.0",
+  "private": true,
+  "author": "Curtis <curtcook@gmail.com>",
   "description": "A simple helpful robot for your Company",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/github/hubot.git"
-  },
   "dependencies": {
-    "async": ">=0.1.0 <1.0.0",
-    "chalk": "^1.0.0",
-    "cline": "^0.8.2",
-    "coffee-script": "1.6.3",
-    "connect-multiparty": "^1.2.5",
-    "express": "^3.21.2",
-    "hubot-memegen": "^0.2.0",
-    "hubot-slack": "^3.3.0",
-    "log": "1.4.0",
-    "optparse": "1.0.4",
-    "scoped-http-client": "0.11.0"
+    "hubot": "^2.19.0",
+    "hubot-diagnostics": "0.0.1",
+    "hubot-google-images": "^0.2.6",
+    "hubot-google-translate": "^0.2.0",
+    "hubot-help": "^0.2.0",
+    "hubot-heroku-keepalive": "^1.0.2",
+    "hubot-maps": "0.0.2",
+    "hubot-pugme": "^0.1.0",
+    "hubot-redis-brain": "0.0.3",
+    "hubot-rules": "^0.1.1",
+    "hubot-scripts": "^2.17.2",
+    "hubot-shipit": "^0.2.0"
   },
   "engines": {
-    "node": ">= 0.8.x",
-    "npm": ">= 1.1.x"
-  },
-  "main": "./index",
-  "bin": {
-    "hubot": "./bin/hubot"
-  },
-  "scripts": {
-    "test": "./script/test"
+    "node": "0.10.x"
   }
 }
